[package]
name = "simagef"
description = "CLI tool for finding similar images"
version = "1.3.2"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/gert7/simagef"
homepage = "https://github.com/gert7/simagef"
authors = ["Gert Oja"]
categories = ["command-line-utilities"]
keywords = ["image", "similarity", "finding", "comparison", "similar"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
bytemuck = "1.24.0"
clap = { version = "4.5.53", features = ["derive"] }
crossbeam = "0.8.2"
image = { version = "0.25.9" }
image-compare = { version = "0.5.0", optional = true }
# image-match = { version = "0.2.3", features = ["img"] }
# image-match = { path = "image-match-rs", features = ["img"] }
indicatif = "0.18.3"
lsh-rs2 = { version = "0.4.1", default-features = false }
# lsh-rs = { path = "lsh-rs" }
num_cpus = "1.17.0"
platform-dirs = "0.3.0"
rusqlite = "0.38.0"
num = "0.4.3"

[features]
pixel = ["image-compare"]
avif = ["image/avif-native"]

[dev-dependencies]
pretty_assertions = "1.4.0"

# [profile.release]
# opt-level = 3
# debug = false
# overflow-checks = false
# strip = "none"
# lto = "thin"
